--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -223,7 +223,7 @@ jobs:
     name: deploy to play store
     runs-on: ubuntu-20.04
     needs: build
-    if: ${{ github.event_name == 'release' || ( github.event_name == 'push' && github.ref == 'refs/heads/master' ) }}
+    if: ${{ ( github.event_name == 'release' || ( github.event_name == 'push' && github.ref == 'refs/heads/master' ) ) && github.repository_owner == 'opengisch' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -264,7 +264,7 @@ jobs:
     name: comment (pr)
     runs-on: ubuntu-20.04
     needs: build
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'pull_request' && github.repository_owner == 'opengisch' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -295,7 +295,7 @@ jobs:
     name: comment (commit)
     runs-on: ubuntu-20.04
     needs: build
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && github.repository_owner == 'opengisch' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
